web_interface/kubernetes/namespace.yaml
# Kubernetes Namespace
# ====================

apiVersion: v1
kind: Namespace
metadata:
  name: reveng
  labels:
    name: reveng
    app: reveng-web-interface
